# cudnml

./: .gitignore  Cargo.toml  LICENSE  README.md  VERSIONS.md  pyproject-pyseam.toml  pyproject.toml  rust-toolchain.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-toolchain-spike-gate-1/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-cpu-oracle-contracts-forest-ir/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-feature-quantizer-cpu-gpu-bit-parity/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-single-gpu-extratree/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-full-forest-randomforest-sklearn-estimators/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-06-PLAN.md  05-PATTERNS.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-determinism-honest-dispatch/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-crossover-benchmark-gate-3/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-PATTERNS.md  07-RESEARCH.md  07-VALIDATION.md
.planning/phases/08-exact-tree-shap-gate-2-implementation/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  08-04-PLAN.md  08-PATTERNS.md  08-RESEARCH.md  08-VALIDATION.md
.planning/phases/09-treelite-export-packaging/: 09-01-PLAN.md  09-02-PLAN.md  09-03-PLAN.md  09-PATTERNS.md  09-RESEARCH.md  09-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/sylva-core/: Cargo.toml  pyproject.toml
crates/sylva-core/src/: backend.rs  config.rs  error.rs  ir.rs  lib.rs  parity.rs  pyseam.rs
crates/sylva-core/src/cpu/: bootstrap.rs  criterion.rs  fit.rs  mod.rs  predict.rs  split_et.rs  split_rf.rs
crates/sylva-core/src/rng/: kat.rs  mod.rs
crates/sylva-core/tests/: determinism.rs  invariants.rs
crates/sylva-cuda/: Cargo.toml
crates/sylva-cuda/benches/: microbench.rs
crates/sylva-cuda/src/: kernels.rs  lib.rs  nvrtc_launch.rs
crates/sylva-cuda/tests/: sanitizer_histogram.rs  toolchain_smoke.rs
docs/: PARITY.md
python/tests/parity/: __init__.py  conftest.py  datasets.py  test_calibration.py  test_distributional_parity.py  test_shallow_depth_proof.py  thresholds.json
scripts/: cupy_baseline.py  import_smoke.py
